# csgo-dsdk

./: CHANGELOG.md  LICENSE.txt  Makefile  README.rst  makenew.sh  pylintrc  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
.github/actions/setup/: action.yml
.github/workflows/: format.yml  main.yml  publish.yml  version.yml
docs/: README.md
fixtures/Y0C7ADW4AZEHSMxKlrFs/: bomb_action  bomb_defuse  bomb_state  csds  grenade_state  header  item_equip  item_pickup  item_remove  molotov_state  player_action  player_blind  player_connect  player_death  player_disconnect  player_fall  player_footstep  player_hurt  player_info  player_personal  player_spawn  player_status  player_vector  round_end  round_mvp  round_start  round_state  tick  weapon_action  weapon_fire
fixtures/Z2ZVbsBleCmXZVZ9bFuL/: bomb_action  bomb_defuse  bomb_state  csds  grenade_state  header  item_equip  item_pickup  item_remove  molotov_state  player_action  player_blind  player_connect  player_death  player_disconnect  player_fall  player_footstep  player_hurt  player_info  player_personal  player_spawn  player_status  player_vector  round_end  round_mvp  round_start  round_state  tick  weapon_action  weapon_fire
fixtures/csds/2022/05/15/80e8dd2f-b876-4136-bfe5-6985bf2db179/: bomb_action  bomb_defuse  bomb_state  csds  grenade_state  header  item_equip  item_pickup  item_remove  molotov_state  player_action  player_blind  player_connect  player_death  player_disconnect  player_fall  round_end  (+13 more)
fixtures/xgcHI9wjH5aKCf5hF578/: bomb_action  bomb_defuse  bomb_state  bot_takeover  csds  grenade_state  header  item_equip  item_pickup  item_remove  molotov_state  player_action  player_blind  player_connect  player_death  player_disconnect  player_fall  player_footstep  player_hurt  player_info  player_interaction  player_name  player_personal  player_spawn  player_status  player_vector  round_end  round_mvp  round_start  round_state  tick  weapon_action  weapon_fire
pureskillgg_csgo_dsdk/: __init__.py
pureskillgg_csgo_dsdk/errors/: __init__.py  channel_structure.py
pureskillgg_csgo_dsdk/overtime/: __init__.py  pop_overtime.py  pop_overtime_test.py
pureskillgg_csgo_dsdk/pii_removal/: __init__.py  scrub_pii.py  scrub_pii_test.py
pureskillgg_csgo_dsdk/scrubber/: __init__.py  scrub_pii.py  scrub_pii_test.py
(+63 files in other folders)
