[tool.poetry]
name = "pureskillgg-makenew-pypackage"
version = "1.19.1"
description = "Package skeleton for a Python module."
authors = ["PureSkill.gg <secure@pureskill.gg>"]
license = "SEE LICENSE IN LICENSE.txt"
readme = "README.rst"
homepage = "https://github.com/pureskillgg/makenew-pypackage"
repository = "https://github.com/pureskillgg/makenew-pypackage"

[[tool.poetry.source]]
name = "pureskillgg"
url = "https://pureskillgg.jfrog.io/artifactory/api/pypi/private"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.4.0"
pytest = "^7.1.1"
pytest-cov = "^4.0.0"
pytest-runner = "^6.0.0"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
