[tool.poetry]
name = "pureskillgg-csgo-dsdk"
version = "2.0.0"
description = "Python Data Science Development Kit for CS:GO."
authors = ["PureSkill.gg <contact@pureskill.gg>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/pureskillgg/csgo-dsdk"
repository = "https://github.com/pureskillgg/csgo-dsdk"

[tool.poetry.dependencies]
python = "^3.9"
pureskillgg-dsdk = "^2.0.0"
structlog = "^22.1.0"
pandas = { version = "^2.2.1", extras = ["performance", "plot", "output-formatting", "computation", "parquet", "fss", "aws"]}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.4.0"
pytest = "^7.1.1"
pytest-cov = "^4.0.0"
pytest-runner = "^6.0.0"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
